# dj-trackfix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  config.example.yaml  pyproject.toml  run_gui.py
.github/workflows/: release.yml
packaging/: BUILD.md  build_windows.bat  installer.iss
trackfix/: beatport.py  cli.py  config.py  convert.py  discogs_auth.py  fix.py  gui.py  info.py  metadata.py  report.py  setmeta.py  sort.py
